# github-traffic-monitor

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: publish.yml
dashboard/: package.json  tsconfig.json
dashboard/src/: index.css  main.tsx
dashboard/src/components/: DashboardView.tsx  LoginView.tsx  MetricsGrid.tsx
dashboard/src/lib/: demo-data.ts
data/: test_output.csv
docs/: api_documentation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CloneLeaderboard.tsx  DashboardToolbar.tsx  DashboardView.tsx  LoadingScreen.tsx  LoginView.tsx  RepoTable.tsx  TrafficCharts.tsx
frontend/src/lib/: github-api.ts
src/gitlytics/: __init__.py  __main__.py  api.py  automation.py  cli.py  core.py  process.py
src/gitlytics/static/: index.html
src/gitlytics/static/assets/: index-0jm8mzmF.js  index-BPCIBQz4.js  index-BXvAvMvQ.js  index-Dk81ZYUT.js  index-DytQw1pB.css  index.es-BgNblKBK.js  jspdf.es.min-D0gHkC9f.js
tests/: __init__.py  conftest.py  live_automation.py  live_cli.py  live_module.py  test_api.py  test_automation.py  test_cli.py  test_core.py  test_process.py
