[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlytics"
version = "0.1.2"
description = "Monitor and automate your GitHub repository traffic analytics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ameya Chopade" }
]
dependencies = [
    "requests",
    "pandas",
    "python-dotenv",
    "croniter"
]
keywords = [
    "github",
    "traffic",
    "analytics",
    "automation",
    "cli"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ameyac11/gitlytics"

[project.optional-dependencies]
dashboard = ["fastapi", "uvicorn", "python-multipart"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0"
]

[project.scripts]
gitlytics = "gitlytics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gitlytics*"]

[tool.setuptools.package-data]
"gitlytics" = ["static/**/*", "static/*"]
